Remove UriService and related components
This commit removes the entire UriService, its related interfaces, controllers, configuration, tests, and associated functionality. The changes streamline the codebase by eliminating unused URI Node management logic and legacy features.